<resources>
    <string name="app_name">MyCalendar</string>

    <string name="start_text">Start Alarm</string>
    <string name="cancel_text">Cancel Alarm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_record">No record !</string>
    <string name="drawer_open">開啓導航抽屜</string>
    <string name="drawer_close">關閉導航抽屜</string>
    <string name="title">標題</string>
    <string name="description">描述</string>
    <string name="location">位置</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="selectDate">What date do you want?</string>

    <integer-array name="drawer_menuIcon">
        <item>@drawable/calendar_3</item>
        <item>@drawable/calendar</item>
        <item>@drawable/calendar_1</item>
        <item>@drawable/calendar_5</item>
        <item>@drawable/alarm</item>
        <item>@drawable/calendar_4</item>
        <item>@drawable/calendar_2</item>
        <item>@drawable/calendar_7</item>
    </integer-array>

    <string-array name="drawer_menu">
        <item>Calender View</item>
        <item>Calender Add</item>
        <item>Calender Edit</item>
        <item>Calender Delete</item>
        <item>Alarm</item>
        <item>Calender 6</item>
        <item>Calender 7</item>
        <item>Calender 8</item>
    </string-array>

    <string-array name="things">
        <item>COCA Light</item>
        <item>COCA Zero</item>
        <item>COCA</item>
        <item>French Fries</item>
        <item>Hamburger</item>
        <item>KFC</item>
    </string-array>

    <string name="action_refresh">重新整理</string>
    <string name="action_edit">編輯</string>
    <string name="action_search">搜尋</string>
    <string name="action_info">軟體資訊</string>
    <string name="action_settings">Settings</string>

    <string name="my_calender">今天日期</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_theme_color">change theme color</string>
    <string-array name="pref_example_list_titles">
        <item>black</item>
        <item>white</item>
        <item>blue</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
