<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_search"/>

</menu>
