<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/input_layout">

    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/input_title" />

    <TextView
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_description"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/input_description" />

    <TextView
        android:text="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_location"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/input_location" />
</LinearLayout>